# src/main/java/com/deep/library/controllers/UserController.java
@@ -1,0 +1,33 @@
+package com.deep.library.controllers;
+
+import com.deep.library.domains.dto.UserRequest;
+import com.deep.library.domains.dto.UserResponse;
+import com.deep.library.services.UserService;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.validation.Valid;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping("/api/v1/users")
+@Tag(name = "user")
+public class UserController {
+
+    private final UserService userService;
+
+    public UserController(UserService userService) {
+        this.userService = userService;
+    }
+
+    @PostMapping
+    ResponseEntity<UserResponse> createUser(
+            @RequestBody @Valid UserRequest userRequest
+    ) {
+        UserResponse newUser = userService.createUser(userRequest);
+        return ResponseEntity.status(HttpStatus.CREATED).body(newUser);
+    }
+}
