# src/main/java/com/deep/library/domains/dto/UserResponse.java
@@ -1,0 +1,10 @@
+package com.deep.library.domains.dto;
+
+import java.util.List;
+
+public record UserResponse(
+        Long id,
+        String username,
+        List<BookResponse> takenBooks
+){
+}
